fix nav alignment on all sizes

--- a/css/responsive-redesign-standard.css
+++ b/css/responsive-redesign-standard.css
@@ -157,18 +157,9 @@ nav ul li a:hover {
 
 /* NAVIGATION styles for tablets and larger */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 992px) {
 
-	nav ul {
-		position: fixed;
-		top: 0;
-		right: 0;
-	} /*moves nav elements to upper right at all times */
-	nav ul li {
-		float: left;
-		display: inline;
-		padding: 15px;
-	}
+
 }/* end media query for large screen sizes */
 /* Begin NAVIGATION styles for desktop and larger */
 @media only screen and (min-width: 992px) {
@@ -176,15 +167,18 @@ nav ul li a:hover {
 	nav ul {
 		position: fixed;
 		right: 0;
+		top:0;
 		width: 70vw;
 		/*top: 0;*/
 	}
 	nav ul li {
 		width: 15vw;
 		float: left;
+		display: inline;
 		position: relative;
-		top: -58px;
-		right: -70px;
+		padding: 15px;
+		height: 30px;
+		top: 5px;
 	}
 	#xs_hamburger {
 		display: none;
